--- a/sass/css/_styles.scss
+++ b/sass/css/_styles.scss
@@ -1,6 +1,14 @@
 $priColor: #aeaeae;
 $secColor: #01017c;
 $radiusPx: 3px;
+$dkgrey: #575757;
+$size:2;
+/*used for extends. Can use % for place holder instead of a class. Place holderr doesn't have arguments*/
+%font-style{
+    color: $dkgrey;
+    line-height: 1;
+    font-weight: 300;
+}
 
 @mixin bk ($color){
         background-color: $color;
@@ -8,27 +16,32 @@ $radiusPx: 3px;
 }
 
 
-.color {
+@function aPlusB($a,$b){
+    @return $a + $b;
 }
-
-@extend color:
-    
 body{
     display:$priColor;
 }
 
 header{
-    @include bk($secColor)
+    @include bk($secColor);
+    @extend %font-style;    
 }
 
+li::before {
+    content: "What is 1+2: " + aPlusB(1,2);
+}
 .headline {
-    @include bk($priColor)
+    @include bk($priColor);
 }
 
 nav{
     @include bk($secColor)
 }
 
+li {
+    @extend %font-style;
+}
 .centerArticleAndAside{
     article{
         @include bk(red);
