--- a/aeronaut/css/styles.css
+++ b/aeronaut/css/styles.css
@@ -96,21 +96,36 @@ html {
   background-position: fixed;
 }
 
-header {
+header, body {
   margin: 0 auto;
   width: 90%;
 }
 
+.pre-nav {
+  margin-bottom: 1em;
+}
+
 .pre-nav a {
-  color: #5d63af;
+  color: #c5f4ff;
   font-family: TrendSlabOne;
-  font-size: .65em;
+  font-size: 1.2em;
   text-decoration: none;
-  transition: 2sec;
+  text-shadow: 0.125em 0.125em #5d63af;
+  transition: 0.2s ease;
+}
+
+.pre-nav a img {
+  width: 90%;
+  transition: 0.1s ease;
+}
+
+.pre-nav a img:hover {
+  width: 95%;
 }
 
 .pre-nav a:hover {
-  color: #c5f4ff;
+  color: #5d63af;
+  text-shadow: 0.125em 0.125em #c5f4ff;
 }
 
 nav ul li {
@@ -120,17 +135,51 @@ nav ul li {
 }
 
 nav ul li a {
-  color: #5d63af;
+  font-size: 1em;
+  color: #c5f4ff;
   font-family: TrendSlabOne;
   text-decoration: none;
+  text-shadow: 0.125em 0.125em #5d63af;
+  transition: 0.1s ease;
 }
 
 nav ul li a:hover {
-  color: #c5f4ff;
+  color: #5d63af;
+  text-shadow: 0.125em 0.125em #c5f4ff;
 }
 
-#hero img {
-  max-width: 100%;
+.mid-page {
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+.hours, .location {
+  margin: 1em;
+  padding: 0.7em;
+  font-family: german-font;
+  font-size: .5em;
+  border: 0.017em sold #5d63af;
+  background-color: white;
+  border-radius: 3em;
+  box-shadow: .2em .2em .25em #888888;
+}
+
+.bottom-page {
+  padding-top: 1em;
+  padding-bottom: .5em;
+}
+
+.contact-us, .twitter-feed, .fb-feed {
+  margin: .5em;
+  padding: 1.2em;
+  font-family: german-font;
+  font-size: .65em;
+  border: 0.017em sold #5d63af;
+  background-color: white;
+  border-radius: 1.5em;
+  box-shadow: .2em .2em .25em #888888;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 html, body {
@@ -145,7 +194,7 @@ header {
   flex-direction: column;
 }
 header .pre-nav {
-  flex: .5;
+  flex: .3;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -188,15 +237,45 @@ body {
   flex: 1;
   display: flex;
 }
-body #hero {
+body .mid-page {
+  flex: 1.5;
+  display: flex;
+  flex-direction: row;
+}
+body .mid-page #hero {
   flex: 1;
   display: flex;
 }
-body #hero img {
+body .mid-page #hero img {
+  flex: 1;
+}
+body .mid-page #side-section {
+  flex: .5;
+  display: flex;
+}
+body .mid-page #side-section #hours {
+  flex: 1;
+}
+body .mid-page #side-section #location {
+  flex: 1;
+}
+body .bottom-page {
+  flex: .5;
+  display: flex;
+  flex-direction: row;
+}
+body .bottom-page .contact-us {
+  flex: 2;
+}
+body .bottom-page .twitter-feed {
+  flex: 1;
+}
+body .bottom-page .fb-feed {
   flex: 1;
 }
 
-.pre-nav {
+/*For testing*/
+.mid-page {
   border: 2px solid red;
   font-size: 30px;
 }
