--- a/aeronaut/css/_home_style.scss
+++ b/aeronaut/css/_home_style.scss
@@ -16,12 +16,12 @@ $aero-yellow: #ffb300;
 $aero-yellow-dk: rgba(163, 115, 0, 0.94);
 $border-rad: 3em;
 $side-marg: 1em;
-$side-pad: .7em;
+$side-pad: 1em;
 
 
 html {
-    background-image: url(../img/sky.png);
-    background-size: cover;
+    background-image: url(../img/sky3.png);
+    background-size: 100% 100%;
     background-position: fixed;
 
 }
@@ -33,14 +33,8 @@ header,body {
 
 .pre-nav{
     margin-bottom: 1em;
-}
-.pre-nav a{
-    color: $aero-blue-lt;
-    font-family: TrendSlabOne;
-    font-size: 1.2em;
-    text-decoration: none;
-    text-shadow: 0.125em 0.125em $aero-blue-dk;
-    transition: 0.2s ease;
+    height: 1.9em;
+    padding-top: .5em;
 }
 
 .pre-nav a img{
@@ -51,11 +45,6 @@ header,body {
 .pre-nav a img:hover{
     width: 95%;
     
-}
-.pre-nav a:hover{
-
-    color: $aero-blue-dk;
-    text-shadow: 0.125em 0.125em $aero-blue-lt;
 }
 
 nav ul li {
@@ -82,8 +71,12 @@ nav ul li a:hover{
     background-color: rgba(255, 255, 255, 0.3);
 }
 
+#hero {
+    padding: $side-pad;
+}
 #hero img{
-
+    width:100%;
+    height:100%;
 }
 
 .hours, .location{
@@ -91,7 +84,7 @@ nav ul li a:hover{
     padding: $side-pad;
     
     font-family: german-font;
-    font-size: .5em;
+    font-size: 1em;
 
     border: .017em sold $aero-blue-dk;
     
@@ -117,10 +110,5 @@ nav ul li a:hover{
     background-color: white;
     border-radius: $border-rad/2;
      box-shadow: .2em .2em .25em #888888;
-    
-    
-      white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
 
 }
