--- a/aeronaut/css/_home_style_flexbox.scss
+++ b/aeronaut/css/_home_style_flexbox.scss
@@ -1,5 +1,4 @@
-html, body {
-    height:100%;    
+html, body {    
     display:flex;
     flex-direction: column;
 }
@@ -9,17 +8,18 @@ header{
     display:flex;
     flex-direction: column;
 
-    .pre-nav{
-        flex:.3;       display:flex;
+    .pre-nav{      
+        flex:1;       display:flex;
         flex-direction: row;
         justify-content: space-between;
-        #newsletter {
+        #media-spacer {
             flex:3;
         }
         #media-links {
             flex:1;
             display:flex;
             flex-direction:row;
+            justify-content: flex-end;
             a{
                 flex:1;             }
         }
@@ -61,7 +61,6 @@ body{
             flex:1;
             display:flex;
             img{
-                flex:1;
             }
         }
 
@@ -77,7 +76,7 @@ body{
     }
 
     .bottom-page{
-        flex:.5;
+        flex:6;
         display:flex;
         flex-direction: row;
         .contact-us{
@@ -85,18 +84,9 @@ body{
         }
 
         .twitter-feed{
-            flex:1;
         }
 
         .fb-feed{
-            flex:1;
         }
     }
-}
-
-
-/*For testing*/
-.mid-page  {
-    border: 2px solid red;  
-    font-size: 30px;
 }
