--- a/aeronaut/css/_home_style.scss
+++ b/aeronaut/css/_home_style.scss
@@ -14,13 +14,13 @@ $aero-blue-dk: #5D63AF;
 $aero-blue-lt: #c5f4ff;
 $aero-yellow: #ffb300;
 $aero-yellow-dk: rgba(163, 115, 0, 0.94);
-$border-rad: 3em;
+$border-rad: 1em;
 $side-marg: 1em;
 $side-pad: 1em;
 
 
 html {
-    background-image: url(../img/sky3.png);
+    background-image: url(../img/sky4-short.png);
     background-size: 100% 100%;
     background-position: fixed;
 
@@ -89,7 +89,7 @@ nav ul li a:hover{
     border: .017em sold $aero-blue-dk;
     
     background-color: white;
-    border-radius: $border-rad;
+    border-radius: .75em;
      box-shadow: .2em .2em .25em #888888;
 }
 
@@ -111,4 +111,9 @@ nav ul li a:hover{
     border-radius: $border-rad/2;
      box-shadow: .2em .2em .25em #888888;
 
+}
+
+footer{
+    background-color: rgba(255, 255, 255, 0.3);
+    justify-items: center;
 }
