--- a/aeronaut/css/_home_style_flexbox_media_query.scss
+++ b/aeronaut/css/_home_style_flexbox_media_query.scss
@@ -3,7 +3,154 @@
     background-color: red;
     background-image: none;
     }
+    
+    header{
+
+    .pre-nav{
+        margin-bottom: 2.1em;
+        #media-spacer {
+            display:none;
+        }
+        
+        #media-links {
+            flex:1;
+            display:flex;
+            flex-direction:row;
+            justify-content: flex-end;
+            
+            
+    
+        }
+    }
+    
+    .logo-and-nav{
+        flex:3;
+        display:flex;
+        flex-direction: column;
+        
+        .logo{
+            flex:3;
+            display:flex;
+            
+            img {
+                flex: 1;
+            }
+        }
+        nav {
+            flex:1;
+            display:flex;
+        
+            ul{
+                flex:1;
+                display:flex;
+                flex-direction: row; 
+                justify-content: center;
+            }
+        }
+    }
+
 }
+
+body{
+    display:flex;
+
+    .mid-page{
+        display:flex;
+        flex-direction: row;
+        
+        .hero {
+            flex:1;
+            img{
+            }
+        }
+
+        .side-section{
+            flex:.5;          
+            display:flex;
+            flex-direction: column;
+            
+            .hours{
+            }
+            
+            .location{
+            }
+        
+            .who{
+            }
+        }
+    }
+
+        
+        .gud{
+            flex:none;
+            display:flex;
+            flex-direction: row;
+            
+            .text-left{
+                flex:1;
+                display:flex;
+                flex-direction: column;
+                .blurb{
+                    flex:none;
+                }
+                .blurb-spacer{
+                    flex:none;
+                }
+            }
+    
+            
+            .img-right{
+                flex:3;                
+                img{
+                }
+            }
+        }
+        .barismo{
+            flex:none;
+            display:flex;
+            flex-direction: row-reverse;
+            
+            .text-left{
+                flex:1;
+                display:flex;
+                flex-direction: column;
+                .blurb{
+                    flex:none;
+                }
+                .blurb-spacer{
+                    flex:1;
+                }
+            }
+        
+            
+            .img-right{
+                flex:3;
+                img{
+                }
+            }
+        }
+    
+    .bottom-page{
+        flex:6;
+        display:flex;
+        flex-direction: row;
+        justify-content: space-between;
+        .contact-us{
+            flex:1;
+        }
+
+        .twitter-feed{
+            flex:1;
+        }
+
+        .fb-feed{
+        
+        }
+    }
+}
+
+
+} /*End of max-width: 480px*/
 
 
 /* Smartphones (portrait and landscape) ----------- */
@@ -80,10 +227,6 @@ only screen and (min-device-pixel-ratio : 1.5) {
 
 
 
-html, body {    
-    display:flex;
-    flex-direction: column;
-}
 
 header{
     flex:1;
