--- a/aeronaut/css/_home_style.scss
+++ b/aeronaut/css/_home_style.scss
@@ -22,9 +22,7 @@ $transparent-bk: rgba(255, 255, 255, 0.3);
 
 html {
     background-image: url(../img/sky4-short.png);
-    background-size: 100% 100%;
-    background-position: fixed;
-
+   background-attachment:fixed;
 }
 
 header,body {
@@ -108,9 +106,7 @@ h2 {
     border-bottom: .2em solid black;
 }
 
-br { 
-    line-height: .5em; 
-}
+
     
 .bottom-page{
     padding-top: 1em;
