--- a/aeronaut/css/_home_style_flexbox_media_query.scss
+++ b/aeronaut/css/_home_style_flexbox_media_query.scss
@@ -1,73 +1,58 @@
 @media (max-width: 480px){
+    
+    header,body {
+        width: 100%;
+    }
+    
     html {
-    background-color: red;
-    background-image: none;
+/*        background-image: url(../img/sky480.png);
+        background-repeat: repeat-y;*/
+        background-image: none;
+        
+        background-color: red;
+        
     }
     
     header{
 
     .pre-nav{
-        margin-bottom: 2.1em;
+        padding-bottom: 3em;
+        
         #media-spacer {
             display:none;
         }
         
         #media-links {
-            flex:1;
-            display:flex;
-            flex-direction:row;
-            justify-content: flex-end;
-            
-            
-    
         }
     }
     
     .logo-and-nav{
-        flex:3;
-        display:flex;
-        flex-direction: column;
-        
+       
         .logo{
-            flex:3;
-            display:flex;
             
             img {
-                flex: 1;
             }
         }
         nav {
-            flex:1;
-            display:flex;
-        
+       
             ul{
-                flex:1;
-                display:flex;
-                flex-direction: row; 
-                justify-content: center;
-            }
+           }
         }
     }
 
 }
 
 body{
-    display:flex;
 
     .mid-page{
-        display:flex;
-        flex-direction: row;
+        flex-direction: column-reverse;
         
         .hero {
-            flex:1;
             img{
             }
         }
 
         .side-section{
-            flex:.5;          
-            display:flex;
-            flex-direction: column;
             
             .hours{
             }
@@ -82,308 +67,153 @@ body{
 
         
         .gud{
-            flex:none;
-            display:flex;
-            flex-direction: row;
+            flex-direction: column;
             
             .text-left{
-                flex:1;
-                display:flex;
-                flex-direction: column;
+
                 .blurb{
-                    flex:none;
+
                 }
                 .blurb-spacer{
-                    flex:none;
+
                 }
             }
     
             
-            .img-right{
-                flex:3;                
+            .img-right{             
                 img{
                 }
             }
         }
         .barismo{
-            flex:none;
-            display:flex;
-            flex-direction: row-reverse;
+            flex-direction: column;
             
             .text-left{
-                flex:1;
-                display:flex;
-                flex-direction: column;
                 .blurb{
-                    flex:none;
                 }
                 .blurb-spacer{
-                    flex:1;
-                }
+               }
             }
         
             
             .img-right{
-                flex:3;
                 img{
                 }
             }
         }
     
     .bottom-page{
-        flex:6;
-        display:flex;
-        flex-direction: row;
-        justify-content: space-between;
+        flex-direction: column;
         .contact-us{
-            flex:1;
         }
 
         .twitter-feed{
-            flex:1;
         }
 
         .fb-feed{
-        
         }
     }
 }
 
-
+    
 } /*End of max-width: 480px*/
 
+@media (min-width: 480px) and (max-width: 880px){
+    
+    header,body {
+     }
+    
+    html {
+        background-color: yellow;
+        background-image: none;
+    }
+    
+    header{
 
-/* Smartphones (portrait and landscape) ----------- */
-@media only screen 
-and (min-device-width : 320px) 
-and (max-device-width : 480px) {
-/* Styles */
-}
-
-/* Smartphones (landscape) ----------- */
-@media only screen 
-and (min-width : 321px) {
-/* Styles */
-}
-
-/* Smartphones (portrait) ----------- */
-@media only screen 
-and (max-width : 320px) {
-/* Styles */
-}
-
-/* iPads (portrait and landscape) ----------- */
-@media only screen 
-and (min-device-width : 768px) 
-and (max-device-width : 1024px) {
-/* Styles */
-}
-
-/* iPads (landscape) ----------- */
-@media only screen 
-and (min-device-width : 768px) 
-and (max-device-width : 1024px) 
-and (orientation : landscape) {
-/* Styles */
-}
-
-/* iPads (portrait) ----------- */
-@media only screen 
-and (min-device-width : 768px) 
-and (max-device-width : 1024px) 
-and (orientation : portrait) {
-/* Styles */
-}
-
-/* Desktops and laptops ----------- */
-@media only screen 
-and (min-width : 1224px) {
-/* Styles */
-}
-
-/* Large screens ----------- */
-@media only screen 
-and (min-width : 1824px) {
-/* Styles */
-}
-
-/* iPhone 4 ----------- */
-@media
-only screen and (-webkit-min-device-pixel-ratio : 1.5),
-only screen and (min-device-pixel-ratio : 1.5) {
-/* Styles */
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-header{
-    flex:1;
-    display:flex;
-    flex-direction: column;
-
-    .pre-nav{      
-        flex:1;       
-        display:flex;
-        flex-direction: row;
-        justify-content: space-between;
+    .pre-nav{
         
         #media-spacer {
-            flex:3;
         }
         
         #media-links {
-            flex:1;
-            display:flex;
-            flex-direction:row;
-            justify-content: flex-end;
-    
-            a{
-                flex:1;             }
         }
     }
     
     .logo-and-nav{
-        flex:3;
-        display:flex;
-        flex-direction: column;
-        
+       
         .logo{
-            flex:3;
-            display:flex;
             
             img {
-                flex: 1;
             }
         }
         nav {
-            flex:1;
-            display:flex;
-        
+       
             ul{
-                flex:1;
-                display:flex;
-                flex-direction: row; 
-                justify-content: center;
-            }
+           }
         }
     }
 
 }
 
 body{
-    display:flex;
 
     .mid-page{
-        display:flex;
-        flex-direction: row;
-        
+        flex-direction: column-reverse;
         .hero {
-            flex:1;
             img{
             }
         }
-
-        .side-section{
-            flex:.5;          
-            display:flex;
-            flex-direction: column;
-            
-            .hours{
-            }
-            
-            .location{
-            }
-        
-            .who{
-            }
-        }
+ 
     }
-
         
         .gud{
-            flex:none;
-            display:flex;
-            flex-direction: row;
-            
+            flex-direction: column;
             .text-left{
                 flex:1;
-                display:flex;
-                flex-direction: column;
                 .blurb{
-                    flex:none;
+
                 }
                 .blurb-spacer{
-                    flex:none;
+
                 }
             }
     
             
-            .img-right{
-                flex:3;                
+            .img-right{ 
+                flex:1;
                 img{
                 }
             }
         }
         .barismo{
-            flex:none;
-            display:flex;
-            flex-direction: row-reverse;
-            
+            flex-direction: column;
             .text-left{
                 flex:1;
-                display:flex;
-                flex-direction: column;
                 .blurb{
-                    flex:none;
                 }
                 .blurb-spacer{
-                    flex:1;
-                }
+               }
             }
         
             
             .img-right{
-                flex:3;
+                flex:2;
                 img{
                 }
             }
         }
     
     .bottom-page{
-        flex:6;
-        display:flex;
-        flex-direction: row;
-        justify-content: space-between;
+        flex-direction: column;
         .contact-us{
-            flex:1;
         }
 
         .twitter-feed{
-            flex:1;
         }
 
         .fb-feed{
-        
         }
     }
 }
 
-
-footer{
-    display:flex;
-    .container{   
-        flex:1;
-    }
-}
+} /*End of max-width: 880px*/
