--- a/aeronaut/css/styles.css
+++ b/aeronaut/css/styles.css
@@ -552,10 +552,8 @@ footer .container {
   }
 
   html {
-    /*        background-image: url(../img/sky480.png);
-            background-repeat: repeat-y;*/
-    background-image: none;
-    background-color: red;
+    background-image: url(../img/sky480.png);
+    background-repeat: repeat-y;
   }
 
   header .pre-nav {
@@ -595,18 +593,38 @@ footer .container {
   }
 }
 /*End of max-width: 480px*/
-@media (min-width: 480px) and (max-width: 880px) {
-  html {
-    background-color: yellow;
-    background-image: none;
-  }
-
+@media (min-width: 480px) and (max-width: 1000px) {
   body .mid-page {
     -webkit-box-orient: vertical;
     -webkit-box-direction: reverse;
     -webkit-flex-direction: column-reverse;
     -ms-flex-direction: column-reverse;
     flex-direction: column-reverse;
+  }
+  body .mid-page .side-section {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
+  body .mid-page .side-section .hours {
+    -webkit-box-flex: 0;
+    -webkit-flex: none;
+    -ms-flex: none;
+    flex: none;
+  }
+  body .mid-page .side-section .location {
+    -webkit-box-flex: 0;
+    -webkit-flex: none;
+    -ms-flex: none;
+    flex: none;
+  }
+  body .mid-page .side-section .who {
+    -webkit-box-flex: 0;
+    -webkit-flex: none;
+    -ms-flex: none;
+    flex: none;
   }
   body .gud {
     -webkit-box-orient: vertical;
