--- a/blackjack/styles.css
+++ b/blackjack/styles.css
@@ -1,14 +1,17 @@
 .buttonHolder{
     margin-top: 1.5em;
     margin-bottom: 1.5em;
-    margin-left: auto;
     margin-right: auto;
-    width: 60%;
 }
 
 #dealer, #player {
-    font-family: 'Lato', sans-serif;   
+    font-family: 'Lato', sans-serif;  
+    float:left;
+    width: 40%;
 }
+
+
+
 button {
     background:none;
     border:none;
@@ -35,23 +38,10 @@ button:hover:disabled{
     border-bottom: 2px solid gray;
 }   
 
-
-#dealer{
-float: left;
-width: 45%;   
-}
-
-#player{
-float: right;
-width: 45%;
-}
-
-
 div[class*="card"] {
-    float:left;
     margin-left: 2px;
     margin-right: 2px;   
-    float: right;
+    float: left;
     padding: 3em;
     text-align: center;
    /* border: 1px solid red;
@@ -110,10 +100,22 @@ background-position:center;
 
 .results {
     font-family: 'Lato', sans-serif;
-    font-size: 1em;
-    margin-left: auto;
-    margin-right: auto;
-    width: 35%;
+    font-size: 1.5em;
     clear: both;
 }
 
+
+@media only screen and (max-width:640px) {
+ #dealer, #player {
+    width: 90%;
+}   
+    
+div[class*="card"] { float:left;}
+}
+
+
+@media only screen and (min-width:900px){
+ #dealer, #player {
+    width: 450px;
+}   
+}
